# droid-agent-sdk

./: README.md  pyproject.toml
src/droid_agent_sdk/: __init__.py  daemon_resume.py  daemon_start.py  events.py  protocol.py  session.py  swarm.py  transport.py
tests/: test_events.py
