[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "droid-agent-sdk"
version = "0.2.0"
description = "SDK for multi-agent collaboration with Factory Droid CLI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "notdp" }]
keywords = ["droid", "agent", "ai", "multi-agent", "factory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/droid_agent_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
